# wechat-butler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.template  docker-compose.yml  entrypoint.sh  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
docs/: PROJECT_SUMMARY.md  README.md
docs/api/: ai-service-api.md  reference.md
docs/architecture/: ai-service-v0.1-detailed-design.md  ai-service-v0.1.md  overview.md  roadmap.md
docs/features/: ai-service-tech-decisions.md  rule-engine.md  system-integration.md
docs/guides/: ai-service-quick-start.md  developer-guide.md  quick-start.md  usage-guide.md
docs/relative-projects-docs/: chatlog  chatlog-api  chatlog-session  wechat-sendmsg
docs/可以参考的项目/: chatgpt-on-wechat.md  wechatferry.md  wechaty.md  开源项目调研报告.md
openspec/changes/archive/2026-05-11-add-dockerfile/: design.md  proposal.md  tasks.md
openspec/changes/implement-butler-ai-service/: design.md  proposal.md  tasks.md
openspec/changes/implement-butler-ai-service/specs/ai-chat-service/: spec.md
openspec/changes/implement-wechat-butler-core/: design.md  proposal.md  tasks.md
openspec/specs/docker-build/: spec.md
openspec/specs/docker-compose/: spec.md
openspec/specs/docker-config/: spec.md
wechat_butler/: __init__.py  config.py  main.py  server.py
wechat_butler/ai/: chat.py  prompts.py
wechat_butler/api/: ai_routes.py  middleware.py
wechat_butler/llm/: router.py
wechat_butler/mcp/: client.py
(+13 files in other folders)
