[project]
name = "wechat-butler"
version = "0.1.0"
description = "WeChat Butler AI Service Layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "litellm>=1.40",
    "mcp>=1.6",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
]

[project.scripts]
butler = "wechat_butler.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wechat_butler*"]
